Add MP4Parser dependency. Fix merge leftovers.

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -32,6 +32,8 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compile 'com.android.support:support-v4:19.0.+'
+    compile 'com.googlecode.mp4parser:isoparser:1.0.+'
+    compile fileTree(dir: "$buildDir/native-libs", include: 'native-libs.jar')
 }
 
 android {
