Replace TextDrawable project own repository with jcenter.

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -2,9 +2,7 @@ apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
-    maven {
-        url 'http://dl.bintray.com/amulyakhare/maven'
-    }
+    jcenter()
 }
 
 task nativeLibsToJar(
