--- a/TMessagesProj/src/main/AndroidManifest.xml
+++ b/TMessagesProj/src/main/AndroidManifest.xml
@@ -184,6 +184,7 @@
         </receiver>
 
         <receiver android:name=".WearReplyReceiver" android:enabled="true"/>
+        <receiver android:name=".NetworkAlarm" android:enabled="true"/>
 
         <uses-library android:name="com.sec.android.app.multiwindow" android:required="false" />
         <meta-data android:name="com.sec.android.support.multiwindow" android:value="true" />
