--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -28,16 +28,18 @@ configurations {
 }
 
 dependencies {
-    compile 'com.android.support:support-core-ui:24.2.1'
-    compile 'com.android.support:support-compat:24.2.1'
-    compile 'com.android.support:support-core-utils:24.2.1'
+    compile 'com.android.support:support-core-ui:25.3.0'
+    compile 'com.android.support:support-compat:25.3.0'
+    compile 'com.android.support:support-core-utils:25.3.0'
+    compile 'com.android.support:support-v13:25.3.0'
+    compile 'com.android.support:palette-v7:25.3.0'
     compile 'com.googlecode.mp4parser:isoparser:1.0.6'
     compile fileTree(dir: "$buildDir/native-libs", include: 'native-libs.jar')
 }
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     useLibrary 'org.apache.http.legacy'
     defaultConfig.applicationId = "org.telegram.messenger"
@@ -48,6 +50,10 @@ android {
         ndkBuild {
             path "jni/Android.mk"
         }
+    }
+
+    dexOptions {
+        jumboMode = true
     }
 
     compileOptions {
@@ -86,6 +92,7 @@ android {
             jniDebuggable false
             signingConfig signingConfigs.release
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -96,7 +103,7 @@ android {
         }
     }
 
-    defaultConfig.versionCode = 851
+    defaultConfig.versionCode = 957
 
     sourceSets.debug {
         manifest.srcFile 'config/debug/AndroidManifest.xml'
@@ -162,13 +169,13 @@ android {
 
     applicationVariants.all { variant ->
         def abiVersion = variant.productFlavors.get(0).versionCode
-        variant.mergedFlavor.versionCode = defaultConfig.versionCode * 10 + abiVersion;
+        variant.mergedFlavor.versionCode = defaultConfig.versionCode * 10 + abiVersion
     }
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 24
-        versionName "3.13.1"
+        targetSdkVersion 25
+        versionName "3.18.0"
 
         externalNativeBuild {
             ndkBuild {
