[safe] build.gradle standard dep updates, version bumps

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -9,19 +9,21 @@ configurations {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-gcm:9.6.1'
-    compile 'com.google.android.gms:play-services-maps:9.6.1'
-    compile 'com.google.android.gms:play-services-vision:9.6.1'
-    compile 'com.android.support:support-core-ui:24.2.1'
-    compile 'com.android.support:support-compat:24.2.1'
-    compile 'com.android.support:support-core-utils:24.2.1'
-    compile 'net.hockeyapp.android:HockeySDK:4.0.1'
+    compile 'com.google.android.gms:play-services-gcm:10.2.0'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.android.gms:play-services-vision:10.2.0'
+    compile 'com.android.support:support-core-ui:25.3.0'
+    compile 'com.android.support:support-compat:25.3.0'
+    compile 'com.android.support:support-core-utils:25.3.0'
+    compile 'com.android.support:support-v13:25.3.0'
+    compile 'com.android.support:palette-v7:25.3.0'
+    compile 'net.hockeyapp.android:HockeySDK:4.1.2'
     compile 'com.googlecode.mp4parser:isoparser:1.0.6'
 }
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '24.0.2'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     useLibrary 'org.apache.http.legacy'
     defaultConfig.applicationId = "org.telegram.messenger"
@@ -32,6 +34,10 @@ android {
         ndkBuild {
             path "jni/Android.mk"
         }
+    }
+
+    dexOptions {
+        jumboMode = true
     }
 
     compileOptions {
@@ -70,6 +76,7 @@ android {
             jniDebuggable false
             signingConfig signingConfigs.release
             minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
@@ -80,7 +87,7 @@ android {
         }
     }
 
-    defaultConfig.versionCode = 851
+    defaultConfig.versionCode = 957
 
     sourceSets.debug {
         manifest.srcFile 'config/debug/AndroidManifest.xml'
@@ -146,13 +153,13 @@ android {
 
     applicationVariants.all { variant ->
         def abiVersion = variant.productFlavors.get(0).versionCode
-        variant.mergedFlavor.versionCode = defaultConfig.versionCode * 10 + abiVersion;
+        variant.mergedFlavor.versionCode = defaultConfig.versionCode * 10 + abiVersion
     }
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 24
-        versionName "3.13.1"
+        targetSdkVersion 25
+        versionName "3.18.0"
 
         externalNativeBuild {
             ndkBuild {
