--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile 'com.android.support:palette-v7:25.3.0'
     compile 'net.hockeyapp.android:HockeySDK:4.1.2'
     compile 'com.googlecode.mp4parser:isoparser:1.0.6'
+    compile 'com.stripe:stripe-android:2.0.2'
 }
 
 android {
