native libs in jar

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ RELEASE_KEY_PASSWORD=password
 RELEASE_KEY_ALIAS=alias
 RELEASE_STORE_PASSWORD=password
 android.useDeprecatedNdk=true
+org.gradle.jvmargs=-Xmx2560M
