--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 task nativeLibsToJar(
@@ -28,13 +27,14 @@ configurations {
 }
 
 dependencies {
-    compile 'com.android.support:support-core-ui:25.3.0'
-    compile 'com.android.support:support-compat:25.3.0'
-    compile 'com.android.support:support-core-utils:25.3.0'
-    compile 'com.android.support:support-v13:25.3.0'
-    compile 'com.android.support:palette-v7:25.3.0'
+    compile 'com.android.support:support-core-ui:25.3.1'
+    compile 'com.android.support:support-compat:25.3.1'
+    compile 'com.android.support:support-core-utils:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.googlecode.mp4parser:isoparser:1.0.6'
     compile 'com.stripe:stripe-android:2.0.2'
+    compile fileTree(dir: "$buildDir/native-libs", include: 'native-libs.jar')
 }
 
 android {
@@ -54,6 +54,7 @@ android {
 
     dexOptions {
         jumboMode = true
+        javaMaxHeapSize "2g"
     }
 
     compileOptions {
@@ -185,4 +186,3 @@ android {
         }
     }
 }
-
