gradle options for compilation

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -53,6 +53,8 @@ android {
 
     dexOptions {
         jumboMode = true
+        // Telegram-FOSS uncomment if it doesn't compile
+        //javaMaxHeapSize "2g"
     }
 
     compileOptions {
