--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ RELEASE_KEY_PASSWORD=password
 RELEASE_KEY_ALIAS=alias
 RELEASE_STORE_PASSWORD=password
 android.useDeprecatedNdk=true
+# Telegram-FOSS uncomment if it doesn't compile
+# org.gradle.jvmargs=-Xmx2560M
