--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.googlecode.mp4parser:isoparser:1.0.6'
+    compile 'org.osmdroid:osmdroid-android:5.6.4'
 }
 
 android {
