--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ RELEASE_KEY_ALIAS=alias
 RELEASE_STORE_PASSWORD=password
 android.useDeprecatedNdk=true
 # Telegram-FOSS uncomment if it doesn't compile
-# org.gradle.jvmargs=-Xmx2560M
+org.gradle.jvmargs=-Xmx2560M
