--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation 'com.android.support:support-core-utils:25.3.1'
     implementation 'com.android.support:support-v13:25.3.1'
     implementation 'com.android.support:palette-v7:25.3.1'
-    implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
+    implementation 'com.googlecode.mp4parser:isoparser:1.1.7'
     implementation 'com.stripe:stripe-android:2.0.2'
     implementation 'org.osmdroid:osmdroid-android:5.6.5'
 }
@@ -35,6 +35,8 @@ android {
 
     dexOptions {
         jumboMode = true
+        // Telegram-FOSS uncomment if it doesn't compile
+        javaMaxHeapSize "2g"
     }
 
     compileOptions {
@@ -42,36 +44,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
-    signingConfigs {
-        debug {
-            storeFile file("config/release.keystore")
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
-            v2SigningEnabled false
-        }
-
-        release {
-            storeFile file("config/release.keystore")
-            storePassword RELEASE_STORE_PASSWORD
-            keyAlias RELEASE_KEY_ALIAS
-            keyPassword RELEASE_KEY_PASSWORD
-            v2SigningEnabled false
-        }
-    }
-
     buildTypes {
         debug {
             debuggable true
             jniDebuggable true
-            signingConfig signingConfigs.debug
             applicationIdSuffix ".beta"
         }
 
         release {
             debuggable false
             jniDebuggable false
-            signingConfig signingConfigs.release
             minifyEnabled false
             shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -80,7 +62,6 @@ android {
         foss {
             debuggable false
             jniDebuggable false
-            signingConfig signingConfigs.release
         }
     }
 
