--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -148,7 +148,7 @@ android {
         externalNativeBuild {
             ndkBuild {
                 arguments "NDK_APPLICATION_MK:=jni/Application.mk", "APP_PLATFORM:=android-14"
-                abiFilters "armeabi-v7a", "x86"
+                abiFilters "armeabi", "armeabi-v7a", "x86"
             }
         }
     }
