--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -9,14 +9,14 @@ configurations {
 }
 
 dependencies {
-    compile 'com.android.support:support-core-ui:25.3.1'
-    compile 'com.android.support:support-compat:25.3.1'
-    compile 'com.android.support:support-core-utils:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
-    compile 'com.android.support:palette-v7:25.3.1'
-    compile 'com.googlecode.mp4parser:isoparser:1.1.22'
-    compile 'com.stripe:stripe-android:2.0.2'
-    compile 'org.osmdroid:osmdroid-android:5.6.5'
+    implementation 'com.android.support:support-core-ui:25.3.1'
+    implementation 'com.android.support:support-compat:25.3.1'
+    implementation 'com.android.support:support-core-utils:25.3.1'
+    implementation 'com.android.support:support-v13:25.3.1'
+    implementation 'com.android.support:palette-v7:25.3.1'
+    implementation 'com.googlecode.mp4parser:isoparser:1.1.22'
+    implementation 'com.stripe:stripe-android:2.0.2'
+    implementation 'org.osmdroid:osmdroid-android:5.6.5'
 }
 
 //return an api key from a properties file.
@@ -33,7 +33,6 @@ def getAppHash(){
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
 
     useLibrary 'org.apache.http.legacy'
     defaultConfig.applicationId = "org.telegram.messenger"
@@ -111,6 +110,8 @@ android {
         manifest.srcFile 'config/foss/AndroidManifest.xml'
     }
 
+    flavorDimensions "default"
+
     productFlavors {
         x86 {
             ndk {
@@ -161,9 +162,11 @@ android {
         }
     }
 
-    applicationVariants.all { variant ->
+    android.applicationVariants.all { variant ->
         def abiVersion = variant.productFlavors.get(0).versionCode
-        variant.mergedFlavor.versionCode = defaultConfig.versionCode * 10 + abiVersion
+        variant.outputs.all { output ->
+            output.setVersionCodeOverride(defaultConfig.versionCode * 10 + abiVersion)
+        }
     }
 
     defaultConfig {
