--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -149,7 +149,7 @@ android {
 
         externalNativeBuild {
             ndkBuild {
-                arguments "NDK_APPLICATION_MK:=jni/Application.mk", "APP_PLATFORM:=android-16"
+                arguments "NDK_APPLICATION_MK:=jni/Application.mk", "APP_PLATFORM:=android-16", "-j5"
                 abiFilters "armeabi", "armeabi-v7a", "x86"
             }
         }
