--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -19,6 +19,18 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:5.6.5'
 }
 
+//return an api key from a properties file.
+def getAppId(){
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("./API_KEYS"))
+    return properties.get("APP_ID")
+}
+def getAppHash(){
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("./API_KEYS"))
+    return "\"" + properties.get("APP_HASH") + "\""
+}
+
 android {
     compileSdkVersion 25
 
@@ -144,8 +156,8 @@ android {
         versionName "4.2.1"
 
         //obtain your own keys at https://core.telegram.org/api/obtaining_api_id
-        buildConfigField 'int', 'APP_ID', AppId
-        buildConfigField 'String', 'APP_HASH', AppHash
+        buildConfigField 'int', 'APP_ID', getAppId()
+        buildConfigField 'String', 'APP_HASH', getAppHash()
 
         externalNativeBuild {
             ndkBuild {
