--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -132,6 +132,19 @@ android {
             minSdkVersion 23
             versionCode = 3
         }
+        armv8_SDK23 {
+            ndk {
+                abiFilter "arm64-v8a"
+            }
+            sourceSets.debug {
+                manifest.srcFile 'config/debug/AndroidManifest_SDK23.xml'
+            }
+            sourceSets.release {
+                manifest.srcFile 'config/release/AndroidManifest_SDK23.xml'
+            }
+            minSdkVersion 23
+            versionCode = 6
+        }
         fat {
             sourceSets.debug {
                 manifest.srcFile 'config/debug/AndroidManifest_SDK23.xml'
@@ -162,7 +175,7 @@ android {
         externalNativeBuild {
             ndkBuild {
                 arguments "NDK_APPLICATION_MK:=jni/Application.mk", "APP_PLATFORM:=android-16", "-j5"
-                abiFilters "armeabi", "armeabi-v7a", "x86"
+                abiFilters "arm64-v8a", "armeabi", "armeabi-v7a", "x86"
             }
         }
     }
