--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -32,6 +32,18 @@ dependencies {
     implementation 'com.stripe:stripe-android:2.0.2'
 }
 
+//return an api key from a properties file.
+def getAppId(){
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("./API_KEYS"))
+    return properties.get("APP_ID")
+}
+def getAppHash(){
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("./API_KEYS"))
+    return "\"" + properties.get("APP_HASH") + "\""
+}
+
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
@@ -253,6 +265,10 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         versionName "5.2.1"
+
+        //obtain your own keys at https://core.telegram.org/api/obtaining_api_id
+        buildConfigField 'int', 'APP_ID', getAppId()
+        buildConfigField 'String', 'APP_HASH', getAppHash()
 
 		vectorDrawables.generatedDensities = ['mdpi', 'hdpi', 'xhdpi', 'xxhdpi']
 
