--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -34,6 +34,18 @@ dependencies {
     implementation 'com.stripe:stripe-android:2.0.2'
 }
 
+//return an api key from a properties file.
+def getAppId(){
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("./API_KEYS"))
+    return properties.get("APP_ID")
+}
+def getAppHash(){
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("./API_KEYS"))
+    return "\"" + properties.get("APP_HASH") + "\""
+}
+
 android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
@@ -279,6 +291,9 @@ android {
         versionName "5.9.0"
 
         vectorDrawables.generatedDensities = ['mdpi', 'hdpi', 'xhdpi', 'xxhdpi']
+        //obtain your own keys at https://core.telegram.org/api/obtaining_api_id
+        buildConfigField 'int', 'APP_ID', getAppId()
+        buildConfigField 'String', 'APP_HASH', getAppHash()
 
         externalNativeBuild {
             ndkBuild {
