[TF][MAPS] replace Google Maps with OSMDroid

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -13,7 +13,6 @@ configurations {
 dependencies {
     compileOnly 'org.checkerframework:checker-qual:2.5.2'
     compileOnly 'org.checkerframework:checker-compat-qual:2.5.0'
-    implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.android.support:support-core-ui:28.0.0'
     implementation 'com.android.support:support-compat:28.0.0'
     implementation 'com.android.support:support-core-utils:28.0.0'
@@ -22,6 +21,7 @@ dependencies {
     implementation 'com.android.support:exifinterface:28.0.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
     implementation 'com.stripe:stripe-android:2.0.2'
+    implementation 'org.osmdroid:osmdroid-android:6.0.2'
 }
 
 //return an api key from a properties file.
@@ -272,5 +272,3 @@ android {
         }
     }
 }
-
-apply plugin: 'com.google.gms.google-services'
