--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -4,6 +4,10 @@ repositories {
     mavenCentral()
     google()
     jcenter()
+    maven{
+        url  'https://oss.sonatype.org/content/repositories/snapshots/'
+        name 'OSS-Sonatype'
+    }
 }
 
 configurations {
@@ -21,7 +25,7 @@ dependencies {
     implementation 'com.android.support:exifinterface:28.0.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
     implementation 'com.stripe:stripe-android:2.0.2'
-    implementation 'org.osmdroid:osmdroid-android:6.0.2'
+    implementation 'org.osmdroid:osmdroid-android:6.1.0-SNAPSHOT'
 }
 
 //return an api key from a properties file.
