--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -19,9 +19,9 @@ dependencies {
 
     compileOnly 'org.checkerframework:checker-qual:2.5.2'
     compileOnly 'org.checkerframework:checker-compat-qual:2.5.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.googlecode.mp4parser:isoparser:1.0.6'
     implementation 'com.stripe:stripe-android:2.0.2'
+    implementation 'org.osmdroid:osmdroid-android:6.1.0'
 }
 
 //return an api key from a properties file.
@@ -295,5 +295,3 @@ android {
         manifestPlaceholders = [applicationClassName: "ApplicationLoader"]
     }
 }
-
-apply plugin: 'com.google.gms.google-services'
