--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ build/
 obj/
 *.iml
 local.properties
+API_KEYS
+*.hprof
+.cxx/
+TMessagesProj/.externalNativeBuild/
+TMessagesProj/jni/ffmpeg/android/
+TMessagesProj/jni/ffmpeg/build/
+TMessagesProj/jni/boringssl/build/
