--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -13,6 +13,7 @@ configurations {
 dependencies {
     implementation 'androidx.core:core:1.3.1'
     implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.interpolator:interpolator:1.0.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.2.0'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
