Simplify build instructions

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@
 .cxx/
 build/
 obj/
+.cxx/
 *.iml
 local.properties
 API_KEYS
 *.hprof
 TMessagesProj/.externalNativeBuild/
 TMessagesProj/jni/ffmpeg/android/
+TMessagesProj/jni/ffmpeg/toolchain-android/
 TMessagesProj/jni/ffmpeg/build/
 TMessagesProj/jni/boringssl/build/
