[TF][FIX] kill yasm libraries until we can build them
also don't build x86 and x86_64 for the time

--- a/TMessagesProj/build.gradle
+++ b/TMessagesProj/build.gradle
@@ -267,7 +267,7 @@ android {
         }
         afat {
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+                abiFilters "armeabi-v7a", "arm64-v8a"
             }
             sourceSets.debug {
                 manifest.srcFile 'config/debug/AndroidManifest_SDK23.xml'
