[TF] revert removing override from manifest

--- a/TMessagesProj_App/src/main/AndroidManifest.xml
+++ b/TMessagesProj_App/src/main/AndroidManifest.xml
@@ -3,4 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="org.telegram.messenger.regular"
     android:installLocation="auto">
+    <application android:name="org.telegram.messenger.ApplicationLoaderImpl" tools:replace="name" />
 </manifest>
