[TF] bump version

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Sat Mar 12 05:53:50 MSK 2016
-APP_VERSION_NAME=8.9.2
-APP_VERSION_CODE=2756
+APP_VERSION_NAME=8.9.2a
+APP_VERSION_CODE=2757
 APP_PACKAGE=org.telegram.messenger
 org.gradle.jvmargs=-Xmx4096M -XX:MaxPermSize=4096m
 org.gradle.daemon=true
